# claude-plugin

./: .cz.toml  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  DOLT_REMOTE.md  README.md  justfile  manifest  pyproject.toml
.beads/: .gitignore  config.yaml  issues.jsonl  metadata.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
hooks/: hooks.json
scripts/: check_version_changelog.py  render_plugin_skills.py
skills/walk/: SKILL.md
skills/walk-inline/: SKILL.md
skills/walk-observer/: SKILL.md
tests/: conftest.py  test_harness_install.py  test_hooks.py  test_manifest.py  test_mcp_config.py  test_no_legacy_paths.py  test_requires_version.py  test_skill_render_parity.py  test_skills.py
