[project]
name = "agentguides-claude-plugin"
version = "0.1.0"
description = "Dev/test harness for the agentguides `guide` Claude Code plugin (declarative plugin tree + pytest suite + skill renderer)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# This project ships a declarative Claude Code plugin (config + rendered
# skills), not an importable Python package, so it has no runtime
# dependencies. `agentguides` is a DEV-only tool used to regenerate the
# rendered walk Skill triple under skills/; a published install would
# resolve it from PyPI (see [tool.uv.sources] for the local checkout).
dependencies = []

[dependency-groups]
dev = [
    # Pinned to the verified-against runtime range. Local dev still resolves the
    # editable sibling checkout via [tool.uv.sources]; the constraint documents
    # what a non-editable resolve would pull and is the compat range
    # `just verify-runtime` proves green.
    "agentguides>=0.5.9,<0.6.0",
    "packaging>=23",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-frontmatter>=1.1",
    "ruff>=0.6",
]

# Local/dev resolves agentguides from the sibling runtime checkout as an
# editable install (the "local fixture run" mechanism). A published install
# falls back to the plain `agentguides` dist on PyPI.
[tool.uv.sources]
agentguides = { path = "../runtime", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
# importlib import-mode keeps test module names from colliding and matches
# the runtime repo's convention.
addopts = "-ra -m 'not live and not perf' --import-mode=importlib"
asyncio_mode = "auto"
markers = [
    "live: tests that require a real host binary (hermes, opencode, etc.) and opt-in env vars; skipped by default — run with `pytest -m live`",
    "perf: wall-clock perf benchmarks; slow (~30s+); skipped by default — run with `pytest -m perf`",
    "requires_runtime: needs guide_cli importable (render-parity drift guard); exclude with `pytest -m 'not requires_runtime'` for the runtime-source-free core run",
]

[tool.ruff]
line-length = 100
target-version = "py310"

# Start lean: ruff's default high-signal rules (pyflakes + a few pycodestyle).
# `ruff format` owns formatting. Mirrors the runtime's config.
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
